hphp/hack/test/typecheck/class_level_where_clauses/this_as/constraint_undefined_method_lookup_01.php.exp
File "constraint_undefined_method_lookup_01.php", line 21, characters 14-16:
No instance method `bar` in `C` (Typing[4053])
  File "constraint_undefined_method_lookup_01.php", line 13, characters 18-20:
  Did you mean `foo` instead?
  File "constraint_undefined_method_lookup_01.php", line 18, characters 27-27:
  This is why I think it is an object of type C
  File "constraint_undefined_method_lookup_01.php", line 12, characters 7-7:
  Declaration of `C` is here
File "constraint_undefined_method_lookup_01.php", line 21, characters 14-16:
No instance method `bar` in `I` (Typing[4053])
  File "constraint_undefined_method_lookup_01.php", line 20, characters 22-22:
  This is why I think it is an object of type I
  File "constraint_undefined_method_lookup_01.php", line 18, characters 11-11:
  Declaration of `I` is here
